--- a/src/css/ownProfile.css
+++ b/src/css/ownProfile.css
@@ -6,12 +6,11 @@
 .ownprofile_page {
   font-family: var(--font-family-bold);
   color: var(--primary-color);
-  width: 95%;
+  /* width: 95%; */
   margin: 0 auto;
-  padding: 0;
+  padding: vh 0vw;
   text-align: center;
-  padding: 2vh 3vw;
-  z-index: 0;
+  padding: 4.7vh 1.1vw 0 1.1vw;
 }
 
 .ownprofile_page p {
@@ -23,10 +22,12 @@
 .profile_main_bar {
   display: flex;
   justify-content: space-between;
+  padding-top: 17px 3vw;
 }
 
-.profile_main_bar img {
-  padding: 0 0.5rem;
+.toktok-logo {
+  width: 30px;
+  height: 30px;
 }
 
 .profile_main_bar section {
@@ -37,7 +38,7 @@
   font-size: calc(var(--font-size-rem) * 2.4);
   font-weight: 500;
   padding-left: 0.5rem;
-  margin: 0;
+  margin: 20px 0;
 }
 
 .head-navigation {
@@ -106,16 +107,16 @@
   /* Profile - Image ------------------------------------- */
 }
 
-.profile_article .profile_img {
+.image-container .profile_img {
   width: 33%;
-  max-width: 100%;
+  width: 140px;
   height: auto;
 }
 
 .edit_icon {
   position: absolute;
-  top: 72%;
-  left: 57.5%;
+  top: 78%;
+  left: 59%;
 }
 
 /* Profile - Facts ------------------------------------- */
