--- a/src/css/editProfile.css
+++ b/src/css/editProfile.css
@@ -30,7 +30,7 @@
 /* Edit - Profile - Image ------------------------------------- */
 
 .edit-image-container {
-    margin: 0 auto;
+    margin: 18px auto;
 }
 
 .edit-image-container .profile-image {
